# Comunity-music-player

./: CMakeLists.txt  Cargo.toml  README.md
Server/: Artist.cpp  Artist.h  Initial.ini  ListaSong.cpp  ListaSong.h  MusicPlayer.cpp  MusicPlayer.h  Socket.cpp  Song.cpp  Song.h  config.ini  listArtist.cpp  main.cpp
src/: main.rs  server.rs  song.rs
